--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,5 +1,5 @@
-$color1:#c4c4c4;
-$color2:rgb(200,108,105);
-$color3:rgb(155,105,105);
+$color1:#a1a1a1;
+$color2:rgb(100,108,105);
+$color3:rgb(150,30,205);
 $serif-fonts:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 $font-base-size: 25px;
