--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,5 +1,5 @@
-$color1:#a1a1a1;
-$color2:rgb(100,108,105);
-$color3:rgb(150,30,205);
-$serif-fonts:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+$color1: #333;
+$color2: #fff;
+$color3: #555;
+$serif-fonts:'Courier New', Courier, monospace;
 $font-base-size: 25px;
