--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -31,20 +31,20 @@ table.menu td {
 
 table.menu button {
   width: 80%;
-  background-color: $color2;
+  background-color: #ccf;
   color: #111;
   text-align: center;
   font-family: $serif-fonts;
   font-weight: normal;
   font-size: 12px;
-  border: 1px solid $color2;
+  border: 1px solid $color3;
   transition: width 0.5s, background-color 0.5s;
   border-radius: 3px
 }
 
 table.menu button:hover {
   cursor: pointer;
-  background-color: $color1;
+  background-color: #ddf;
   width: 85%;
   transition: width 0.5s, background-color 0.5s
 }
@@ -66,8 +66,8 @@ table.menu td.result {
 .clicky {
   position: absolute;
   border-radius: 50%;
-  background-color: $color3;
-  border: 1px solid $color3;
+  background-color: #aaf;
+  border: 1px solid #555;
   box-shadow: #000 0 0 15px
 }
 
